--- a/drivers/usb/host/Kconfig
+++ b/drivers/usb/host/Kconfig
@@ -308,7 +308,7 @@ config SUPERH_ON_CHIP_R8A66597
 
 config USB_WII_HCD
 	tristate "Nintendo Wii HCD support"
-	depends on USB && WII && EXPERIMENTAL
+	depends on USB && WII && !HIGHMEM && EXPERIMENTAL
 	help
 	  The Nintendo Wii includes a USB 1.1 host controller that can be
 	  accessed through the API provided by the starlet subsystem.
